--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-openai = "*"
+openai = "==0.27.5"
+pyside2 = "==5.15.2.1"
+tiktoken = "==0.3.3"
+semver = "*"
 
 [dev-packages]
 
